argocd/manifests/authentik/deployment-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-redis
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik
      component: redis
  template:
    metadata:
      labels:
        app: authentik
        component: redis
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: redis
          image: docker.io/library/redis:kustomized
          ports:
            - name: redis
              containerPort: 6379
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "100m"
