argocd/manifests/authentik/service-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-redis
  namespace: authentik
spec:
  selector:
    app: authentik
    component: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
