argocd/manifests/authentik/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: authentik
spec:
  selector:
    app: authentik
    component: server
  ports:
    - name: http
      port: 9000
      targetPort: 9000
